--- a/style.css
+++ b/style.css
@@ -63,3 +63,32 @@ button{
     height: auto;
 }
 
+.main-heading {
+    font-size: 110px;
+    font-weight: 400;
+    font-family: 'gt-super', Georgia, serif;
+    line-height: 1.2;
+    letter-spacing: -0.05em;
+    margin-left: 5%;
+}
+
+.heading-subtext {
+    font-size: 22px;
+    font-family: 'Georgia', serif;
+    color: #000000;
+    margin-top: 20px;
+    margin-left: 5%;
+}
+.start-reading-btn {
+    background-color: rgb(26, 137, 23);
+    color: white;
+    padding: 8px 20px;
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    width: 196px;
+    line-height: 28px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-left: 5%;
+}
